# actix-bookstore

./: .env  Cargo.toml
migrations/2022-12-17-103413_create_tweets/: down.sql
migrations/2022-12-17-121932_create_users/: up.sql
migrations/2022-12-17-123523_create_books/: up.sql
migrations/2022-12-19-112303_create_categories/: up.sql
src/: main.rs  routes.rs  schema.rs
src/handlers/: book.rs  category.rs  mod.rs  user.rs
src/libs/: constants.rs  respond.rs
src/models/: book.rs  category.rs  filters.rs  mod.rs  pagination.rs  response.rs  user.rs
src/repository/: category.rs  user.rs
src/services/: category.rs  user.rs  user_service.rs
